[tool.pdm]

[project]
name = "regapi"
version = "0.1.0"
description = "Python container registry API library."
authors = [
    {name = "Ales Raszka", email = "araszka@redhat.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
regapi = [
    "requests>=2.31.0",
]
regapi-dev = [
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "black>=23.3.0",
    "pytest-cov>=4.1.0",
    "pylint>=2.17.4",
    "bandit>=1.7.5",
    "yamllint>=1.32.0",
]
tox = [
    "tox>=4.5.2",
    "tox-pdm>=0.6.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
