[tool.pdm]

[project]
name = "regapi"
version = "0.1.0"
description = "Python container registry API library."
authors = [{ name = "Ales Raszka", email = "araszka@redhat.com" }]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
[project.optional-dependencies]
tox = ["tox-pdm>=0.6.1", "tox>=4.5.2"]
regapi-dev = [
    "yamllint>=1.32.0",
    "bandit>=1.7.5",
    "pylint>=2.17.4",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
]
regapi = ["requests>=2.31.0"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
