[tool.pdm]

[project]
name = "coregio"
version = "0.5.2"
description = "Python container registry API library."
authors = [{ name = "Ales Raszka", email = "araszka@redhat.com" }]
dependencies = ["requests>=2.31.0"]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE.txt" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Allda/coregio"
"Bug Tracker" = "https://github.com/Allda/coregio/issues"

[project.optional-dependencies]
tox = ["tox-pdm>=0.6.1", "tox>=4.5.2"]
coregio-dev = [
    "yamllint>=1.32.0",
    "bandit>=1.7.5",
    "pylint>=2.17.4",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "mypy>=1.3.0",
    "pytest>=7.3.1",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
